# ai-marketplace-api

./: .env.example  README.md  justfile  manage.py  pyproject.toml
.zed/: settings.json
ai_marketplace/: asgi.py  settings.py  urls.py  wsgi.py
models_api/: apps.py  models.py  serializers.py  urls.py  views.py
models_api/migrations/: 0001_initial.py  0002_aimodel_modelbenchmark_modelpurchase_usagescenario_and_more.py
